compiler/testData/diagnostics/tests/dataClasses/innerDataClass.kt
class Outer {
    <!INCOMPATIBLE_MODIFIERS!>inner<!> data class Inner(val x: Int)
}
